data/all_generated_tests/raw_wast_tests/loop_ImproperFunctionCallorReturnHandling_921.wast
;; 2. **Test Case**: Implement a loop containing a `call_indirect` instruction that should dynamically resolve to different functions based on stack values pushed before the loop.    - **Constraint Check**: Verify correct indirect function resolution and return type validation within a loop.    - **Improper Function Call or Return Handling**: Incorrect table indexing leading to calls to wrong functions within the loop.

(assert_invalid
  (module
    (type $ft_i (func (param i32) (result i32)))
    (func $f (type $ft_i) (param $p i32) (result i32) (local.get $p))
    (table anyfunc (elem $f))
    (func $type-value-call-indirect-vs-loop (result i32)
      (i32.const 0)
      (loop (result i32)
        (call_indirect (type $ft_i) (i32.const 0))
      )
    )
  )
  "type mismatch"
)